--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "bundle/javascript"]
 	path = bundle/javascript
 	url = https://github.com/pangloss/vim-javascript.git
+[submodule "bundle/sgmlendtag"]
+	path = bundle/sgmlendtag
+	url = https://github.com/ervandew/sgmlendtag.git
